style: adopt wooteco java style