@@ -8,47 +8,47 @@ import racingcar.domain.formula.Formula;
 
 public class RaceGame {
 
-  private final int MINIMUM_ROUND = 1;
+    private final int MINIMUM_ROUND = 1;
 
-  private final List<Car> cars;
-  private final Formula formula;
-  private int round;
+    private final List<Car> cars;
+    private final Formula formula;
+    private int round;
 
-  public RaceGame(final Formula formula, final List<Car> cars, final int round) {
-    validateRound(round);
-    this.formula = formula;
-    this.cars = cars;
-    this.round = round;
-  }
-
-  private void validateRound(final int round) {
-    isRoundPositive(round);
-  }
-
-  private void isRoundPositive(final int round) {
-    if (round < MINIMUM_ROUND) {
-      throw new IllegalArgumentException("시도할 회수는 1 이상이어야 합니다.");
+    public RaceGame(final Formula formula, final List<Car> cars, final int round) {
+        validateRound(round);
+        this.formula = formula;
+        this.cars = cars;
+        this.round = round;
     }
-  }
 
-  public void race(final Consumer<List<RaceGameResult>> consumer) {
-    while (round >= MINIMUM_ROUND) {
-      List<RaceGameResult> raceResults = cars.stream()
-          .map(car -> new RaceGameResult(car.getName(), car.move(formula)))
-          .collect(Collectors.toList());
-      consumer.accept(raceResults);
-      round--;
+    private void validateRound(final int round) {
+        isRoundPositive(round);
     }
-  }
 
-  public List<String> currentHeadOfRace() {
-    int maxPosition = cars.stream()
-        .mapToInt(Car::getPosition)
-        .max()
-        .orElse(0);
-    return cars.stream()
-        .filter(car -> car.getPosition() == maxPosition)
-        .map(Car::getName)
-        .toList();
-  }
+    private void isRoundPositive(final int round) {
+        if (round < MINIMUM_ROUND) {
+            throw new IllegalArgumentException("시도할 회수는 1 이상이어야 합니다.");
+        }
+    }
+
+    public void race(final Consumer<List<RaceGameResult>> consumer) {
+        while (round >= MINIMUM_ROUND) {
+            List<RaceGameResult> raceResults = cars.stream()
+                    .map(car -> new RaceGameResult(car.getName(), car.move(formula)))
+                    .collect(Collectors.toList());
+            consumer.accept(raceResults);
+            round--;
+        }
+    }
+
+    public List<String> currentHeadOfRace() {
+        int maxPosition = cars.stream()
+                .mapToInt(Car::getPosition)
+                .max()
+                .orElse(0);
+        return cars.stream()
+                .filter(car -> car.getPosition() == maxPosition)
+                .map(Car::getName)
+                .toList();
+    }
 }
